typescript/checker/tests/conformance/types/tuple/wideningTuples5.ts.stderr
error: ImplicitAny {
    span: Span {
        lo: BytePos(
            94,
        ),
        hi: BytePos(
            103,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples5.ts:2:15
  |
2 | var [a, b] = [undefined, null];
  |               ^^^^^^^^^

error: ImplicitAny {
    span: Span {
        lo: BytePos(
            105,
        ),
        hi: BytePos(
            109,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples5.ts:2:26
  |
2 | var [a, b] = [undefined, null];
  |                          ^^^^

